# polymarket-btc-bot

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  REFACTOR_DIAGNOSTIC_STATUS.md  pyproject.toml  run_bot.sh
.vibe/: config.toml
.vibe/skills/constraint-check/: SKILL.md
.vibe/skills/gen-tests/: SKILL.md
.vibe/skills/perf-audit/: SKILL.md
scripts/: diagnose_clob_ws.py  diagnose_rtds.py
setup_cli/: __main__.py  benchmark.py  geo_checker.py  validator.py
src/: __main__.py  config.py
src/engine/: clock.py  loop.py  state.py
src/execution/: clob_client.py  order_builder.py  redeemer.py  slug_resolver.py
src/feeds/: binance_ws.py  feed_manager.py  polymarket_clob_ws.py  polymarket_rtds.py
src/polymarket_btc_bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/signal/: delta.py  gbm.py  indicators.py  scorer.py  volatility.py
src/strategy/: filters.py  kelly.py  taker_selective.py
src/utils/: logger.py
tests/: test_clob_ws_feed.py  test_delta.py  test_filters.py  test_gbm.py  test_kelly.py  test_loop_dry.py  test_order_builder.py  test_redeemer.py  test_rtds_feed.py  test_slug_resolver.py  test_taker_logging.py  test_volatility.py
