[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "polymarket-btc-bot"
version = "0.1.0"
description = "Automated trading bot for Polymarket BTC UpDown 5-minute markets"
authors = [{name = "Devstral 2", email = "vibe@mistral.ai"}]
requires-python = ">=3.11"
license = {text = "MIT"}

[project.dependencies]
uvloop = ">=0.22.0"
orjson = ">=3.10.0"
picows = ">=1.0.0"
aiohttp = ">=3.9.0"
py-clob-client = ">=0.34.5"
numpy = ">=1.26.0"
scipy = ">=1.12.0"
structlog = ">=24.0.0"
python-dotenv = ">=1.0.0"
web3 = ">=7.0.0"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "mypy>=1.0.0",
    "ruff>=0.4.0",
]

[tool.mypy]
mypy_path = "src"
check_untyped_defs = true
strict = true

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N", "D"]
ignore = []

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
